add tests to get user reading
