# user-reading/docs/swagger.json
@@ -14,6 +14,42 @@
     "basePath": "/",
     "paths": {
         "/api/authors": {
+            "get": {
+                "description": "Gets user reading from DB. Uses access token from an HTTP-only cookie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User reading"
+                ],
+                "summary": "Get user reading",
+                "responses": {
+                    "200": {
+                        "description": "User reading",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/clients.ResponseBookFullInfo"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Updates user reading in DB. Uses access token from an HTTP-only cookie",
                 "consumes": [
@@ -33,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.RequestUserReading"
+                            "$ref": "#/definitions/server.UserReading"
                         }
                     }
                 ],
@@ -140,6 +176,23 @@
         }
     },
     "definitions": {
+        "clients.ResponseBookFullInfo": {
+            "type": "object",
+            "properties": {
+                "authors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "server.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -148,7 +201,7 @@
                 }
             }
         },
-        "server.RequestUserReading": {
+        "server.UserReading": {
             "type": "object",
             "properties": {
                 "book_id": {
